--- a/application/view/tmpl/extension.phtml
+++ b/application/view/tmpl/extension.phtml
@@ -46,8 +46,8 @@
                                     <td>
                                         <div class="extension-actions">
                                             <a href="http://wpaam.com/aam-extensions/aam-plus-package/" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Website"></a>
-                                            <?php if ($this->hasExtension('AAM Plus Package')) { ?>
-                                                <a href="#" extension="AAM Plus Package" license="<?php echo $this->getExtension('AAM Plus Package')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
+                                            <?php if ($this->getRepository()->hasExtension('AAM Plus Package')) { ?>
+                                                <a href="#" extension="AAM Plus Package" license="<?php echo $this->getRepository()->getExtension('AAM Plus Package')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
                                             <?php } else { ?>
                                                 <a href="#" extension="AAM Plus Package" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=UEM8U65HFEG4Q" class="extension-action extension-action-purchase" aam-tooltip="Get it Today"></a>
                                             <?php } ?>
@@ -67,8 +67,8 @@
                                     <td>
                                         <div class="extension-actions">
                                             <a href="http://wpaam.com/aam-extensions/aam-activities/" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Website"></a>
-                                            <?php if ($this->hasExtension('AAM Activities')) { ?>
-                                                <a href="#" extension="AAM Activities" license="<?php echo $this->getExtension('AAM Activities')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
+                                            <?php if ($this->getRepository()->hasExtension('AAM Activities')) { ?>
+                                                <a href="#" extension="AAM Activities" license="<?php echo $this->getRepository()->getExtension('AAM Activities')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
                                             <?php } else { ?>
                                                 <a href="#" extension="AAM Activities" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HME9DTSFSJH4W" class="extension-action extension-action-purchase" aam-tooltip="Get it Today"></a>
                                             <?php } ?>
@@ -88,8 +88,8 @@
                                     <td>
                                         <div class="extension-actions">
                                             <a href="http://wpaam.com/aam-extensions/aam-media-manager/" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Website"></a>
-                                            <?php if ($this->hasExtension('AAM Media Manager')) { ?>
-                                                <a href="#" extension="AAM Media Manager" license="<?php echo $this->getExtension('AAM Media Manager')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
+                                            <?php if ($this->getRepository()->hasExtension('AAM Media Manager')) { ?>
+                                                <a href="#" extension="AAM Media Manager" license="<?php echo $this->getRepository()->getExtension('AAM Media Manager')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
                                             <?php } else { ?>
                                                 <a href="#" extension="AAM Media Manager" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=WJ48A7Z6EFZJ4" class="extension-action extension-action-purchase" aam-tooltip="Get it Today"></a>
                                             <?php } ?>
@@ -110,8 +110,8 @@
                                         
                                         <div class="extension-actions">
                                             <a href="http://wpaam.com/aam-extensions/aam-content-filter/" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Website"></a>
-                                            <?php if ($this->hasExtension('AAM Content Filter')) { ?>
-                                                <a href="#" extension="AAM Content Filter" license="<?php echo $this->getExtension('AAM Content Filter')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
+                                            <?php if ($this->getRepository()->hasExtension('AAM Content Filter')) { ?>
+                                                <a href="#" extension="AAM Content Filter" license="<?php echo $this->getRepository()->getExtension('AAM Content Filter')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
                                             <?php } else { ?>
                                                 <a href="#" extension="AAM Content Filter" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=X7NZ7QF8A9CVS" class="extension-action extension-action-purchase" aam-tooltip="Get it Today"></a>
                                             <?php } ?>
