--- a/media/css/aam.css
+++ b/media/css/aam.css
@@ -15,17 +15,6 @@
     font-size: 1.1em;
 }
 
-.aam-help-pointer .inner {
-    padding: 10px;
-    text-align: justify;
-}
-
-.aam-help-pointer .wp-pointer-arrow {
-    left: auto;
-    right: 20px;
-}
-
-
 /** GLOBAL AAM STYLES */
 #aam_form{
     position: relative;
@@ -113,6 +102,189 @@
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+.aam-icon{
+    text-indent: -9999px;
+    text-align: center;
+    background-repeat: no-repeat;
+}
+
+a.aam-icon{
+    outline: none;
+    display: inline-block;
+}
+
+.aam-icon span {
+    content: "";
+    display: block;
+    background-repeat: no-repeat;
+    opacity: 1;
+    -webkit-transition: opacity 0.5s;
+    -moz-transition:    opacity 0.5s;
+    -o-transition:      opacity 0.5s;
+}
+
+.aam-icon-medium span {
+    background-image: url('images/common/medium-iconset.png');
+    width: 24px;
+    height: 24px;
+    margin-left: calc(50% - 12px);
+    margin-left: -moz-calc(50% - 12px);
+}
+
+.aam-icon-medium:hover span {
+    opacity: 1;
+}
+
+.aam-icon-small span {
+    background-image: url('images/common/small-iconset.png');
+    width: 16px;
+    height: 16px;
+    margin-left: calc(50% - 8px);
+    margin-left: -moz-calc(50% - 8px);
+}
+
+.aam-icon-small:hover span{
+    opacity: 1;
+}
+
+.aam-icon-medium-active{
+    background-position-y: -24px !important;
+}
+
+.aam-icon-small-active{
+    background-position-y: -16px !important;
+}
+
+.aam-icon-add span{
+    background-position: 0 0;
+}
+
+.aam-icon-add:hover span{
+    background-position: 0 -24px;
+}
+
+.aam-icon-refresh span{
+    background-position: -24px 0px;
+}
+
+.aam-icon-refresh:hover span{
+    background-position: -24px -24px;
+}
+
+.aam-icon-filter span{
+    background-position: -48px 0px;
+}
+
+.aam-icon-filter:hover span{
+    background-position: -48px -24px;
+}
+
+.aam-icon-copy span{
+    background-position: -72px 0px;
+}
+
+.aam-icon-copy:hover span{
+    background-position: -72px -24px;
+}
+
+.aam-icon-restore span{
+    background-position: -96px 0px;
+}
+
+.aam-icon-restore:hover span{
+    background-position: -96px -24px;
+}
+
+.aam-medium-loader span{
+    background-image: url('images/common/medium-loader.gif');
+    background-position: 0 0 !important;
+}
+
+.aam-icon-manage span{
+    background-position: 0 0;
+}
+
+.aam-icon-manage:hover span{
+    background-position: 0 -16px;
+}
+
+.aam-icon-delete span{
+    background-position: -16px 0;
+}
+
+.aam-icon-delete:hover span{
+    background-position: -16px -16px;
+}
+
+.aam-icon-pen span{
+    background-position: -32px 0;
+}
+
+.aam-icon-pen:hover span{
+    background-position: -32px -16px;
+}
+
+.aam-icon-edit-user span{
+    background-position: -48px 0;
+}
+
+.aam-icon-edit-user:hover span{
+    background-position: -48px -16px;
+}
+
+.aam-icon-block span{
+    background-position: -64px 0;
+}
+
+.aam-icon-block:hover span{
+    background-position: -64px -16px;
+}
+
+.aam-icon-default span{
+    background-position: -80px 0;
+}
+
+.aam-icon-default:hover span{
+    background-position: -80px -16px;
+}
+
+.aam-icon-trash span{
+    background-position: -96px 0;
+}
+
+.aam-icon-trash:hover span{
+    background-position: -96px -16px;
+}
+
+.aam-icon-select span{
+    background-position: -112px 0;
+}
+
+.aam-icon-select:hover span{
+    background-position: -112px -16px;
+}
+
+.aam-list-top-actions{
+    float: right;
+    display: inline-table;
+    width: auto;
+    text-align: right;
+}
+
+.aam-list-top-actions a{
+    display: table-cell;
+    min-width: 30px;
+}
+
+.aam-list-row-actions{
+    width: 100%;
+    display: inline-table;
+    text-align: center;
+}
+
+.aam-list-row-actions .aam-icon{
+    display: table-cell;
+}
 
 .clear{
     line-height: 0;
@@ -350,6 +522,7 @@
 
 .control-manager-content{
     border-top: 1px solid #F5F5F5;
+    visibility: hidden;
 }
 
 /**
@@ -367,97 +540,6 @@
     background-image: url('images/cmanager/role-active.png');
 }
 
-.role-top-actions{
-    float: right;
-    display: inline-table;
-    width: auto;
-    text-align: right;
-}
-
-.role-top-action{
-    width: 24px;
-    height: 24px;
-    display: table-cell;
-    text-indent: -9999px;
-    padding-right: 10px;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.role-top-action-add{
-    background-image: url('images/cmanager/add.png');
-}
-
-.role-top-action-add:hover{
-    background-image: url('images/cmanager/add-active.png');
-}
-
-.role-top-action-add-active{
-    background-image: url('images/cmanager/add-active.png');
-}
-
-.role-actions{
-    width: 100%;
-    display: table;
-}
-
-.role-action{
-    width: 16px;
-    height: 16px;
-    display: table-cell;
-    text-indent: -9999px;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.role-action-edit{
-    background-image: url('images/cmanager/edit.png');
-}
-
-.role-action-edit:hover{
-    background-image: url('images/cmanager/edit-active.png');
-}
-
-.role-action-edit-active{
-    background-image: url('images/cmanager/edit-active.png');
-}
-
-.role-action-delete{
-    background-image: url('images/cmanager/delete.png');
-}
-
-.role-action-delete-active{
-    background-image: url('images/cmanager/delete-active.png');
-}
-
-.role-action-delete:hover{
-    background-image: url('images/cmanager/delete-active.png');
-}
-
-.role-action-manage{
-    background-image: url('images/cmanager/settings.png');
-}
-
-.role-action-manage-active{
-    background-image: url('images/cmanager/settings-active.png');
-}
-
-.role-action-manage:hover{
-    background-image: url('images/cmanager/settings-active.png');
-}
-
-.role-action-duplicate{
-    background-image: url('images/cmanager/duplicate.png');
-}
-
-.role-action-duplicate-active{
-    background-image: url('images/cmanager/duplicate-active.png');
-}
-
-.role-action-duplicate:hover{
-    background-image: url('images/cmanager/duplicate-active.png');
-}
-
 /** USER MANAGER STYLES */
 .manager-item-user{
     background-image: url('images/cmanager/user.png');
@@ -465,133 +547,6 @@
 
 .manager-item-user-active{
     background-image: url('images/cmanager/user-active.png');
-}
-
-.user-top-actions{
-    float: right;
-    display: inline-table;
-    width: auto;
-    text-align: right;
-}
-
-.user-top-action{
-    width: 24px;
-    height: 24px;
-    display: table-cell;
-    text-indent: -9999px;
-    padding-right: 10px;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.user-top-action-add{
-    background-image: url('images/cmanager/add.png');
-}
-
-.user-top-action-add:hover{
-    background-image: url('images/cmanager/add-active.png');
-}
-
-.user-top-action-filter{
-    background-image: url('images/cmanager/filter.png');
-}
-
-.user-top-action-filter:hover{
-    background-image: url('images/cmanager/filter-active.png');
-}
-
-.user-top-action-filter-active{
-    background-image: url('images/cmanager/filter-active.png');
-}
-
-.user-top-action-refresh{
-    background-image: url('images/cmanager/refresh.png');
-}
-
-.user-top-action-refresh:hover{
-    background-image: url('images/cmanager/refresh-active.png');
-}
-
-.user-actions{
-    width: 100%;
-    display: table;
-}
-
-.user-action{
-    width: 16px;
-    height: 16px;
-    display: table-cell;
-    text-indent: -9999px;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.user-action-edit{
-    background-image: url('images/cmanager/edit-user.png');
-}
-
-.user-action-edit-active{
-    background-image: url('images/cmanager/edit-user-active.png');
-}
-
-.user-action-edit:hover{
-    background-image: url('images/cmanager/edit-user-active.png');
-}
-
-.user-action-block{
-    background-image: url('images/cmanager/block-user.png');
-}
-
-.user-action-block-active{
-    background-image: url('images/cmanager/block-user-active.png');
-}
-
-.user-action-block:hover{
-    background-image: url('images/cmanager/block-user-active.png');
-}
-
-.user-action-restore{
-    background-image: url('images/cmanager/restore.png');
-}
-
-.user-action-restore:hover{
-    background-image: url('images/cmanager/restore-active.png');
-}
-
-.user-action-delete{
-    background-image: url('images/cmanager/delete.png');
-}
-
-.user-action-delete-active{
-    background-image: url('images/cmanager/delete-active.png');
-}
-
-.user-action-delete:hover{
-    background-image: url('images/cmanager/delete-active.png');
-}
-
-.user-action-manage{
-    background-image: url('images/cmanager/settings.png');
-}
-
-.user-action-manage-active{
-    background-image: url('images/cmanager/settings-active.png');
-}
-
-.user-action-manage:hover{
-    background-image: url('images/cmanager/settings-active.png');
-}
-
-.user-action-select{
-    background-image: url('images/cmanager/select.png');
-}
-
-.user-action-select:hover{
-    background-image: url('images/cmanager/select-active.png');
-}
-
-.user-action-locked{
-    background-image: url('images/cmanager/lock.png');
 }
 
 .user-settings{
@@ -618,6 +573,13 @@
     border: 0px solid transparent;
 }
 
+.user-action-locked{
+    display: inline-block;
+    width:16px;
+    height: 16px;
+    background: transparent url('images/cmanager/lock.png') no-repeat center;
+}
+
 
 /** VISITOR MANAGER STYLES */
 .manager-item-visitor{
@@ -642,53 +604,6 @@
 
 
 /** ADMIN MENU STYLES */
-.menu-top-actions{
-    padding: 2px 0;
-    width: 100%;
-    margin-bottom: 10px;
-    text-align: right;
-    position: relative;
-}
-
-.menu-top-action-item{
-    width:24px;
-    height: 24px;
-    display: inline-block;
-    background-repeat: no-repeat;
-    background-position: center;
-    text-indent: -9999px;
-    text-decoration: none;
-}
-
-.menu-top-action-sort-description{
-    border: 1px solid #257DA6;
-    height: 24px;
-    position: absolute;
-    left: 0px;
-    width: 80%;
-    text-align: left;
-    padding-left: 10px;
-    vertical-align: middle;
-    display: inline-table;
-    border-radius: 4px;
-    font-family: 'Lucida Console', Monaco, monospace;
-    visibility: hidden;
-    font-weight: bold;
-}
-
-.menu-top-action-sort-description span{
-    display: table-cell;
-    vertical-align: middle;
-}
-
-.menu-top-action-sort{
-    background-image: url('images/menu/sorting.png');
-}
-
-.menu-top-action-sort-active{
-    background-image: url('images/menu/sorting-active.png');
-}
-
 .menu-item-action{
     background-repeat: no-repeat;
     background-position: center;
@@ -806,41 +721,14 @@
     background-image: url('images/metabox/link-active.png');
 }
 
-.metabox-top-action{
-    width:24px;
-    height: 24px;
-    display: block;
-    background-repeat: no-repeat;
-    background-position: center;
-    text-indent: -9999px;
-    text-decoration: none;
-}
-
-.metabox-top-action-add{
-    background-image: url('images/metabox/add.png');
-    float: left;
+.metabox-top-actions .aam-icon-add{
     margin-left: 10px;
+    display: inline-block;
 }
 
-.metabox-top-action-add:hover{
-    background-image: url('images/metabox/add-active.png');
-}
-
-.metabox-top-action-add-active{
-    background-image: url('images/metabox/add-active.png');
-    float: left;
-    margin-left: 10px;
-}
-
-.metabox-top-action-refresh{
-    background-position: right center;
-    background-image: url('images/metabox/refresh.png');
+.metabox-top-actions .aam-icon-refresh{
     float: right;
-}
-
-.metabox-top-action-refresh:hover{
-    background-position: right center;
-    background-image: url('images/metabox/refresh-active.png');
+    display: inline-block;
 }
 
 .metabox-group{
@@ -894,71 +782,6 @@
 }
 
 /** CAPABILITIES STYLES */
-.capability-top-actions{
-    float: right;
-    display: inline-table;
-    width: auto;
-    text-align: right;
-}
-
-.capability-top-action{
-    width: 24px;
-    height: 24px;
-    display: table-cell;
-    text-indent: -9999px;
-    padding-right: 10px;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.capability-top-action-add{
-    background-image: url('images/capability/add.png');
-}
-
-.capability-top-action-add:hover{
-    background-image: url('images/capability/add-active.png');
-}
-
-.capability-top-action-add-active{
-    background-image: url('images/capability/add-active.png');
-}
-
-.capability-top-action-copy{
-    background-image: url('images/capability/copy.png');
-}
-
-.capability-top-action-copy:hover{
-    background-image: url('images/capability/copy-active.png');
-}
-
-.capability-top-action-copy-active{
-    background-image: url('images/capability/copy-active.png');
-}
-
-.capability-top-action-filter{
-    background-image: url('images/capability/filter.png');
-}
-
-.capability-top-action-filter:hover{
-    background-image: url('images/capability/filter-active.png');
-}
-
-.capability-top-action-filter-active{
-    background-image: url('images/capability/filter-active.png');
-}
-
-.capability-top-action-restore{
-    background-image: url('images/capability/restore.png');
-}
-
-.capability-top-action-restore:hover{
-    background-image: url('images/capability/restore-active.png');
-}
-
-.capability-top-action-restore-running{
-    background-image: url('images/capability/ajax-loader.gif');
-}
-
 .capability-actions{
     display: table;
     width: 100%;
@@ -1042,43 +865,6 @@ a.capability-action{
 
 
 /** POSTS & CATEGORIES STYLES */
-.post-top-actions{
-    float: right;
-    display: inline-table;
-    width: auto;
-    text-align: right;
-}
-
-.post-top-action{
-    width: 24px;
-    height: 24px;
-    display: table-cell;
-    text-indent: -9999px;
-    padding-right: 10px;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.post-top-action-filter{
-    background-image: url('images/post/filter.png');
-}
-
-.post-top-action-filter:hover{
-    background-image: url('images/post/filter-active.png');
-}
-
-.post-top-action-filter-active{
-    background-image: url('images/post/filter-active.png');
-}
-
-.post-top-action-refresh{
-    background-image: url('images/post/refresh.png');
-}
-
-.post-top-action-refresh:hover{
-    background-image: url('images/post/refresh-active.png');
-}
-
 .post-type-post{
     height: 16px;
     background: transparent url('images/post/post.png') no-repeat left center;
@@ -1087,77 +873,9 @@ a.capability-action{
     text-decoration: none;
 }
 
-.post-actions{
-    display: table;
-    width: 100%;
-}
-
-.post-action{
-    width: 16px;
-    height: 16px;
-    display: table-cell;
-    padding: 2px 0;
-    background-repeat: no-repeat;
-    background-position: center;
+.post-action-check{
     text-align: center;
 }
-
-.post-action-manage{
-    background-image: url('images/post/settings.png');
-}
-
-.post-action-manage:hover{
-    background-image: url('images/post/settings-active.png');
-}
-
-.post-action-manage-active{
-    background-image: url('images/post/settings-active.png');
-}
-
-.post-action-edit{
-    background-image: url('images/post/edit.png');
-}
-
-.post-action-edit:hover{
-    background-image: url('images/post/edit-active.png');
-}
-
-.post-action-edit-active{
-    background-image: url('images/post/edit-active.png');
-}
-
-.post-action-restore{
-    background-image: url('images/post/restore.png');
-}
-
-.post-action-restore:hover{
-    background-image: url('images/post/restore-active.png');
-}
-
-.post-action-delete{
-    background-image: url('images/post/delete.png');
-}
-
-.post-action-delete:hover{
-    background-image: url('images/post/delete-active.png');
-}
-
-.post-action-delete-active{
-    background-image: url('images/post/delete-active.png');
-}
-
-.post-action-trash{
-    background-image: url('images/post/trash.png');
-}
-
-.post-action-trash:hover{
-    background-image: url('images/post/trash-active.png');
-}
-
-.post-action-trash-active{
-    background-image: url('images/post/trash-active.png');
-}
-
 
 .post-action-lock{
     background-image: url('images/lock.png');
@@ -1246,34 +964,15 @@ a.capability-action{
     display:inline-table;
     border-left: 1px solid #CCCCCC;
     vertical-align: middle;
+    text-align: center;
 }
 
-.post-breadcrumb-line-action{
+.post-breadcrumb-line-actions a{
     display: table-cell;
     width: 16px;
     height: 16px;
     background-position: center;
     background-repeat: no-repeat;
-}
-
-.post-breadcrumb-line-action-edit{
-    background-image: url('images/post/edit.png');
-}
-
-.post-breadcrumb-line-action-edit:hover{
-    background-image: url('images/post/edit-active.png');
-}
-
-.post-breadcrumb-line-action-manage{
-    background-image: url('images/post/settings.png');
-}
-
-.post-breadcrumb-line-action-manage:hover{
-    background-image: url('images/post/settings-active.png');
-}
-
-.post-breadcrumb-line-action-manage-active{
-    background-image: url('images/post/settings-active.png');
 }
 
 .post-breadcrumb-line-action-lock{
@@ -1408,36 +1107,6 @@ a.aam-lock-big{
 
 
 /** EVENT MANAGER STYLES */
-.event-top-actions{
-    float: right;
-    display: inline-table;
-    width: auto;
-    text-align: right;
-}
-
-.event-top-action{
-    width: 24px;
-    height: 24px;
-    display: table-cell;
-    text-indent: -9999px;
-    padding-right: 10px;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.event-top-action-add{
-    background-image: url('images/event/add.png');
-}
-
-.event-top-action-add:hover{
-    background-image: url('images/event/add-active.png');
-}
-
-.event-top-action-add-active{
-    background-image: url('images/event/add-active.png');
-}
-
-
 .event-actions{
     display: table;
     width: 100%;
