--- a/application/view/tmpl/configpress.phtml
+++ b/application/view/tmpl/configpress.phtml
@@ -55,14 +55,24 @@
                         <span><?php echo __('Control Panel', 'aam'); ?></span>
                     </h3>
                     <div class="inside">
-                        <div class="cpanel-major">
-                            <a href="#" class="cpanel-item cpanel-item-save" id="save_config" ><?php echo __('Save', 'aam'); ?></a>
+                        <div class="large-icons-row">
+                            <a href="#" class="aam-icon aam-icon-large aam-icon-large-save" id="save_config" >
+                                <span></span><?php echo __('Save', 'aam'); ?>
+                            </a>
                         </div>
-                        <div class="cpanel-minor">
-                            <a href="https://twitter.com/wpaam" target="_blank" class="cpanel-item cpanel-item-twitter" id="aam_twitter" aam-tooltip="<?php echo __('Follow @wpaam', 'aam'); ?>"><?php echo __('Follow', 'aam'); ?></a>
-                            <a href="http://wpaam.com/support" target="_blank" class="cpanel-item cpanel-item-help" id="aam_help" aam-tooltip="<?php echo __('Help Forum', 'aam'); ?>"><?php echo __('Help', 'aam'); ?></a>
-                            <a href="mailto:support@wpaam.com" class="cpanel-item cpanel-item-message" id="aam_message" aam-tooltip="<?php echo __('E-mail Us', 'aam'); ?>"><?php echo __('E-mail Us', 'aam'); ?></a>
-                            <a href="http://wordpress.org/support/view/plugin-reviews/advanced-access-manager" target="_blank" class="cpanel-item cpanel-item-star" aam-tooltip="<?php echo __('Rate AAM', 'aam'); ?>"><?php echo __('Rate Us', 'aam'); ?></a>
+                        <div class="medium-icons-row">
+                            <a href="https://twitter.com/wpaam" target="_blank" class="aam-icon aam-icon-medium aam-icon-medium-twitter" aam-tooltip="<?php echo __('Follow @wpaam', 'aam'); ?>">
+                                <span></span><?php echo __('Follow', 'aam'); ?>
+                            </a>
+                            <a href="http://wpaam.com/support" target="_blank" class="aam-icon aam-icon-medium aam-icon-medium-help" aam-tooltip="<?php echo __('Help Forum', 'aam'); ?>">
+                                <span></span><?php echo __('Help', 'aam'); ?>
+                            </a>
+                            <a href="mailto:support@wpaam.com" class="aam-icon aam-icon-medium aam-icon-medium-message" id="aam_message" aam-tooltip="<?php echo __('E-mail Us', 'aam'); ?>">
+                                <span></span><?php echo __('E-mail Us', 'aam'); ?>
+                            </a>
+                            <a href="http://wordpress.org/support/view/plugin-reviews/advanced-access-manager" target="_blank" class="aam-icon aam-icon-medium aam-icon-medium-star" aam-tooltip="<?php echo __('Rate AAM', 'aam'); ?>">
+                                <span></span><?php echo __('Rate Us', 'aam'); ?>
+                            </a>
                         </div>
                     </div>
                 </div>
