--- a/application/view/tmpl/extension.phtml
+++ b/application/view/tmpl/extension.phtml
@@ -169,10 +169,16 @@
                         <span><?php echo __('Connect with AAM', 'aam'); ?></span>
                     </h3>
                     <div class="inside">
-                        <div id="misc-publishing-actions" class="cpanel">
-                            <a href="https://twitter.com/wpaam" class="cpanel-item cpanel-item-twitter" aam-tooltip="Follow @wpaam" target="_blank">Follow</a>
-                            <a href="mailto:support@wpaam.com" class="cpanel-item cpanel-item-message" aam-tooltip="Send Us Email">Send Message</a>
-                            <a href="http://wpaam.com" class="cpanel-item cpanel-item-website" aam-tooltip="Visit Us" target="_blank">Website</a>
+                        <div class="large-icons-row">
+                            <a href="https://twitter.com/wpaam" class="aam-icon aam-icon-large aam-icon-large-twitter" aam-tooltip="Follow @wpaam" target="_blank">
+                                <span></span><?php echo __('Follow Us', 'aam'); ?>
+                            </a>
+                            <a href="mailto:support@wpaam.com" class="aam-icon aam-icon-large aam-icon-large-message" aam-tooltip="Send Us Email">
+                                <span></span><?php echo __('Send Message', 'aam'); ?>
+                            </a>
+                            <a href="http://wpaam.com" class="aam-icon aam-icon-large aam-icon-large-link" aam-tooltip="Visit Us" target="_blank">
+                                <span></span><?php echo __('Website', 'aam'); ?>
+                            </a>
                         </div>
                     </div>
                 </div>
