--- a/application/view/tmpl/metabox.phtml
+++ b/application/view/tmpl/metabox.phtml
@@ -12,8 +12,8 @@
         <div class="metabox-top-action-link">
             <input type="text" class="link-text" id="metabox_link" />
         </div>
-        <a href="#" class="aam-icon aam-icon-medium aam-icon-add" id="retrieve_url" aam-tooltip="<?php echo __('Retrieve Metaboxes From Link', 'aam') ;?>"><span></span></a>
-        <a href="#" class="aam-icon aam-icon-medium aam-icon-refresh" id="refresh_metaboxes" aam-tooltip="<?php echo __('Refresh the List', 'aam') ;?>"><span></span></a>
+        <a href="#" class="aam-icon aam-icon-medium aam-icon-medium-add" id="retrieve_url" aam-tooltip="<?php echo __('Retrieve Metaboxes From Link', 'aam') ;?>"><span></span></a>
+        <a href="#" class="aam-icon aam-icon-medium aam-icon-medium-refresh" id="refresh_metaboxes" aam-tooltip="<?php echo __('Refresh the List', 'aam') ;?>"><span></span></a>
         <br class="clear" />
     </div>
     <div class="aam-metabox-loader"></div>
