--- a/application/view/tmpl/extension.phtml
+++ b/application/view/tmpl/extension.phtml
@@ -46,9 +46,9 @@
                                         <div class="extension-actions">
                                             <a href="http://wpaam.com/aam-extensions/aam-plus-package/" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Website"></a>
                                             <?php if ($this->getRepository()->hasExtension('AAM Plus Package')) { ?>
-                                                <a href="#" extension="AAM Plus Package" license="<?php echo $this->getRepository()->getExtension('AAM Plus Package')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
+                                                <a href="#" extension="AAM Plus Package" license="<?php echo $this->getRepository()->getLicense('AAM Plus Package'); ?>" class="extension-action extension-action-ok view-license-btn" aam-tooltip="Installed Successfully"></a>
                                             <?php } else { ?>
-                                                <a href="#" extension="AAM Plus Package" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=UEM8U65HFEG4Q" class="extension-action extension-action-purchase" aam-tooltip="Get it Today"></a>
+                                                <a href="#" extension="AAM Plus Package" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=UEM8U65HFEG4Q" class="extension-action extension-action-purchase add-license-btn" aam-tooltip="Get it Today"></a>
                                             <?php } ?>
                                         </div>
                                     </td>
@@ -67,9 +67,9 @@
                                         <div class="extension-actions">
                                             <a href="http://wpaam.com/aam-extensions/aam-activities/" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Website"></a>
                                             <?php if ($this->getRepository()->hasExtension('AAM Activities')) { ?>
-                                                <a href="#" extension="AAM Activities" license="<?php echo $this->getRepository()->getExtension('AAM Activities')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
+                                                <a href="#" extension="AAM Activities" license="<?php echo $this->getRepository()->getLicense('AAM Activities'); ?>" class="extension-action extension-action-ok view-license-btn" aam-tooltip="Installed Successfully"></a>
                                             <?php } else { ?>
-                                                <a href="#" extension="AAM Activities" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HME9DTSFSJH4W" class="extension-action extension-action-purchase" aam-tooltip="Get it Today"></a>
+                                                <a href="#" extension="AAM Activities" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HME9DTSFSJH4W" class="extension-action extension-action-purchase add-license-btn" aam-tooltip="Get it Today"></a>
                                             <?php } ?>
                                         </div>
                                     </td>
@@ -88,9 +88,9 @@
                                         <div class="extension-actions">
                                             <a href="http://wpaam.com/aam-extensions/aam-media-manager/" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Website"></a>
                                             <?php if ($this->getRepository()->hasExtension('AAM Media Manager')) { ?>
-                                                <a href="#" extension="AAM Media Manager" license="<?php echo $this->getRepository()->getExtension('AAM Media Manager')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
+                                                <a href="#" extension="AAM Media Manager" license="<?php echo $this->getRepository()->getLicense('AAM Media Manager'); ?>" class="extension-action extension-action-ok view-license-btn" aam-tooltip="Installed Successfully"></a>
                                             <?php } else { ?>
-                                                <a href="#" extension="AAM Media Manager" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=WJ48A7Z6EFZJ4" class="extension-action extension-action-purchase" aam-tooltip="Get it Today"></a>
+                                                <a href="#" extension="AAM Media Manager" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=WJ48A7Z6EFZJ4" class="extension-action extension-action-purchase add-license-btn" aam-tooltip="Get it Today"></a>
                                             <?php } ?>
                                         </div>
                                     </td>
@@ -110,9 +110,9 @@
                                         <div class="extension-actions">
                                             <a href="http://wpaam.com/aam-extensions/aam-content-filter/" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Website"></a>
                                             <?php if ($this->getRepository()->hasExtension('AAM Content Filter')) { ?>
-                                                <a href="#" extension="AAM Content Filter" license="<?php echo $this->getRepository()->getExtension('AAM Content Filter')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
+                                                <a href="#" extension="AAM Content Filter" license="<?php echo $this->getRepository()->getLicense('AAM Content Filter'); ?>" class="extension-action extension-action-ok view-license-btn" aam-tooltip="Installed Successfully"></a>
                                             <?php } else { ?>
-                                                <a href="#" extension="AAM Content Filter" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=X7NZ7QF8A9CVS" class="extension-action extension-action-purchase" aam-tooltip="Get it Today"></a>
+                                                <a href="#" extension="AAM Content Filter" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=X7NZ7QF8A9CVS" class="extension-action extension-action-purchase add-license-btn" aam-tooltip="Get it Today"></a>
                                             <?php } ?>
                                         </div>
                                     </td>
@@ -130,28 +130,28 @@
                                         <div class="extension-actions">
                                             <a href="http://wpaam.com/aam-development/aam-plugin-manager/" target="_blank" class="extension-action extension-action-forum" aam-tooltip="Visit Our Website"></a>
                                             <?php if ($this->getRepository()->hasExtension('AAM Plugin Manager')) { ?>
-                                                <a href="#" extension="AAM Plugin Manager" license="<?php echo $this->getRepository()->getExtension('AAM Content Filter')->license; ?>" class="extension-action extension-action-ok" aam-tooltip="Installed Successfully"></a>
+                                                <a href="#" extension="AAM Plugin Manager" license="<?php echo $this->getRepository()->getLicense('AAM Content Filter'); ?>" class="extension-action extension-action-ok view-license-btn" aam-tooltip="Installed Successfully"></a>
                                             <?php } else { ?>
-                                                <a href="#" extension="AAM Plugin Manager" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QJ2H2J483VXPL" class="extension-action extension-action-purchase" aam-tooltip="Get it Today"></a>
+                                                <a href="#" extension="AAM Plugin Manager" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QJ2H2J483VXPL" class="extension-action extension-action-purchase add-license-btn" aam-tooltip="Get it Today"></a>
                                             <?php } ?>
                                         </div>
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
-                        <div id="install_extension" class="aam-dialog" title="<?php echo __('Install Extension', 'aam'); ?>">
+                        <div id="install_license" class="aam-dialog" title="<?php echo __('Install License', 'aam'); ?>">
                             <p class="dialog-content">
-                                <?php echo __('If you already have license key for current extension, please enter it below. Othewise click <b>Purchase</b> button to checkout your order.', 'aam'); ?>
+                                <?php echo __('If you already have license key, just enter it below. Othewise click <b>Purchase</b> button to checkout your order.', 'aam'); ?>
                                 <input type="text" class="license-input" id="license_key" placeholder="License Key" />
                             </p>
-                            <ul class="extension-error-list"></ul>
+                            <ul class="license-error-list"></ul>
                         </div>
-                        <div id="update_extension" class="aam-dialog" title="<?php echo __('Update Extension', 'aam'); ?>">
+                        <div id="update_license" class="aam-dialog" title="<?php echo __('Update License', 'aam'); ?>">
                             <p class="dialog-content" style="text-align: center;">
-                                <?php echo __('Extension has been installed. Your license key: ', 'aam'); ?><br/>
+                                <?php echo __('Your license key: ', 'aam'); ?><br/>
                                 <b><span id="installed_license_key"></span></b>
                             </p>
-                            <ul class="extension-error-list"></ul>
+                            <ul class="license-error-list"></ul>
                         </div>
                     </div>
                 </div>
@@ -211,14 +211,20 @@
                 <div class="postbox">
                     <div class="handlediv" title="<?php echo __('Click to toggle', 'aam'); ?>"></div>
                     <h3 class="hndle">
-                        <span><?php echo __('Development License', 'aam'); ?></span>
+                        <span style="color:#FF0000;"><?php echo __('Development License', 'aam'); ?></span>
                     </h3>
                     <div class="inside">
                         <p>
-                            <?php echo __('Become a member of <b>AAM Community</b>. Obtain <b>Development License</b> today for $119 and get access to all extensions that are available today and will be developed witin a year.', 'aam'); ?>
+                            <?php echo __('Get <b>Development License</b> for $119 and receive access to all extensions that are available today and will be developed within a year.', 'aam'); ?>
+                            <a href="http://wpaam.com/aam-development/aam-development-license/" target="_blank"><?php echo __('Read More', 'aam'); ?></a>
                         </p>
                         <div style="text-align: center;">
-                            <a href="http://wpaam.com/aam-development/aam-development-license/" target="_blank" class="button button-primary button-large"><?php echo __('Read More', 'aam'); ?></a>
+                            <?php if ($this->getRepository()->hasLicense('AAM Development License')) { ?>
+                                <a href="#" extension="AAM Development License" license="<?php echo $this->getRepository()->getLicense('AAM Development License'); ?>" class="button button-primary button-large view-license-btn"><?php echo __('View License', 'aam'); ?></a>
+                            <?php } else { ?>
+                                <a href="#" extension="AAM Development License" link="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3Q6UDARTR532U" class="button button-primary button-large add-license-btn"><?php echo __('Add License', 'aam'); ?></a>
+                            <?php } ?>
+
                         </div>
                     </div>
                 </div>
