Notification about upcoming v3. Removed help context menu
git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@1246329 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/application/view/tmpl/manager.phtml
+++ b/application/view/tmpl/manager.phtml
@@ -8,6 +8,13 @@
  */
 ?>
 <div class="wrap" id="aam">
+    <div class="notification-message">
+        <p>
+            Advanced Access Manager is changing the primary owner to <a href="http://vasyltech.com" target="_blank">VasylTech</a>.<br/>
+            Stay tuned to the AAM version 3 development progress on <a href="https://github.com/VasylTech/advanced-access-manager" target="_blank">GitHub repository</a> or on twitter <a href="https://twitter.com/vasyltech" target="_blank">@vasyltech</a>.
+            <br/>The estimated release is mid November 2015.
+        </p>
+    </div>
     <form action="" method="post" id="aam_form">
         <?php do_action('aam_cmanager_hierarchy'); ?>
         <div class="postbox-container" style="width:70%;">
