--- a/application/view/tmpl/manager.phtml
+++ b/application/view/tmpl/manager.phtml
@@ -1,5 +1,4 @@
 <?php
-
 /**
  * ======================================================================
  * LICENSE: This file is subject to the terms and conditions defined in *
@@ -8,13 +7,19 @@
  */
 ?>
 <div class="wrap" id="aam">
-    <div class="notification-message">
-        <p>
-            Advanced Access Manager is changing the primary owner to <a href="http://vasyltech.com" target="_blank">VasylTech</a>.<br/>
-            Stay tuned to the AAM version 3 development progress on <a href="https://github.com/VasylTech/advanced-access-manager" target="_blank">GitHub repository</a> or on twitter <a href="https://twitter.com/vasyltech" target="_blank">@vasyltech</a>.
-            <br/>The estimated release is mid November 2015.
-        </p>
+    <div class="aam-notification">
+        <div class="aam-logo"></div>
+        <div class="aam-notification-content">
+            <h1>Important Notification</h1>
+            <p>
+                Advanced Access Manager is changing the primary owner to <a href="http://vasyltech.com" target="_blank">VasylTech</a>.<br/>
+                Stay tuned to the AAM version 3 development progress on <a href="https://github.com/VasylTech/advanced-access-manager" target="_blank">GitHub repository</a> or on twitter <a href="https://twitter.com/vasyltech" target="_blank">@vasyltech</a>.
+                <br/>The estimated release is mid November 2015.
+            </p>
+        </div>
+        <a class="dashicons dashicons-dismiss" id="close-aam-notification" href="#"></a>
     </div>
+
     <form action="" method="post" id="aam_form">
         <?php do_action('aam_cmanager_hierarchy'); ?>
         <div class="postbox-container" style="width:70%;">
