Introduced the AAM version 3 alpha
git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@1275918 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/application/view/tmpl/manager.phtml
+++ b/application/view/tmpl/manager.phtml
@@ -10,12 +10,9 @@
     <div class="aam-notification">
         <div class="aam-logo"></div>
         <div class="aam-notification-content">
-            <h1>Important Notification</h1>
-            <p>
-                Advanced Access Manager is changing the primary owner to <a href="http://vasyltech.com" target="_blank">VasylTech</a>.<br/>
-                Stay tuned to the AAM version 3 development progress on <a href="https://github.com/VasylTech/advanced-access-manager" target="_blank">GitHub repository</a> or on twitter <a href="https://twitter.com/vasyltech" target="_blank">@vasyltech</a>.
-                <br/>The estimated release is mid November 2015.
-            </p>
+            <h1 style="color: #d80800">Important Notification</h1>
+            <h3>The <u>AAM version 3</u> is available for download <a href="https://downloads.wordpress.org/plugin/advanced-access-manager.3.0.zip">here</a></h3>
+            <p>Please notice that this is the alpha version and it strongly recommended to install and test it first on a test environment.</p>
         </div>
         <a class="dashicons dashicons-dismiss" id="close-aam-notification" href="#"></a>
     </div>
